--- a/component/answerItem/answerItem.wxss
+++ b/component/answerItem/answerItem.wxss
@@ -78,16 +78,16 @@ color:rgba(51,51,51,1);
 line-height:45rpx;
 }
 .duty{
-  width:260rpx;
+  width:350rpx;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  margin-left: 20rpx;
   font-size:28rpx;
   font-family:PingFang-SC-Medium;
   font-weight:500;
   color:rgba(102,102,102,1);
   line-height:40rpx;
+  margin-top: 10rpx;
 }
 
 .title {
@@ -104,6 +104,7 @@ line-height:45rpx;
 
 .up_v {
   display: flex;
+  flex-direction:column;
 }
 
 .con_bot {
