--- a/component/cardDetail/cardDetail.wxss
+++ b/component/cardDetail/cardDetail.wxss
@@ -10,12 +10,19 @@
 }
 .card-detail .title{
     font-size: 40rpx;
-    font-weight: bold;
-    margin-top:10rpx
+    /* font-weight: bold; */
+    margin-top:10rpx;
+    font-family:PingFang-SC-Bold;
+    font-weight:bold;
+    color:rgba(51,51,51,1);
+    line-height:56rpx;
 }
 /* .row-1{
     align-items: flex-start;
 } */
+.row-1{
+  position: relative
+}
 .column-bottom{
     font-size:30rpx;
     line-height: 56rpx;
@@ -50,13 +57,13 @@
   color:#4c89fb;
   font-size:45rpx;
   margin-top:10rpx;
-  margin-left:10rpx;
+  margin-left:22rpx;
 }
 .icon-female{
     color:#fa7b7b;
     font-size:35rpx;
     margin-top:10rpx;
-    margin-left:10rpx;
+    margin-left:22rpx;
 }
 .menu{
   width:40rpx;
@@ -77,4 +84,12 @@
  text-overflow: ellipsis;
  white-space: nowrap;
 
+}
+.vip_icon{
+  width:36rpx;
+  height:36rpx;
+  display: flex;
+  margin-top: 10rpx;
+  padding-left: 8rpx
+  
 }
