--- a/component/gridItem/gridItem.wxss
+++ b/component/gridItem/gridItem.wxss
@@ -3,8 +3,6 @@ width:335rpx;
 height:253rpx;
 background:rgba(216,216,216,1);
 border-radius:4rpx;
-
-
 }
 .wrap_textarea{
   padding: 20rpx;
@@ -16,12 +14,25 @@ border-radius:4rpx;
   justify-content: space-between;
   margin-top: 20rpx;
 }
-
+.font_recomond{
+  font-size:34rpx;
+font-family:PingFang-SC-Medium;
+font-weight:bold;
+color:rgba(51,51,51,1);
+line-height:48rpx;
+}
 .text_gz{
   display: flex;
   justify-content: flex-end;
   margin-top: 7rpx;
   align-items: center
+}
+.text_more{
+  font-size:28rpx;
+font-family:PingFang-SC-Medium;
+font-weight:500;
+color:rgba(102,102,102,1);
+line-height:40rpx;
 }
 .title{
   margin-bottom: 20rpx; 
@@ -36,4 +47,31 @@ border-radius:4rpx;
   border-bottom:  1rpx solid rgba(220,221,227,1);
 
   margin-bottom: 20rpx;
+}
+.left_blue{
+  width:8rpx;
+  height:34rpx;
+  background:rgba(76,137,251,1);
+  border-radius:4rpx;
+  margin-right: 20rpx;
+}
+.wrap_few{
+  display: flex;
+  height: auto;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  background-color: #fff;
+  padding-top: 30rpx;
+}
+.dca{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+}
+.flex{
+    display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
