--- a/pages/cardPage/cardPage.wxml
+++ b/pages/cardPage/cardPage.wxml
@@ -19,7 +19,9 @@
             <text class='redDos' wx:if="{{cardAllInfo.view_point!=0}}">{{cardAllInfo.view_point}}</text>
           </view>
         </navigator>
-        <button style='width:230rpx;height:90rpx' class="button-item button-1" open-type='share'>分享名片</button>
+   
+        <navigator url='/pages/account/cardCode' style='width:169rpx;height:90rpx' class="button-item" hover-class="none">名片码</navigator>
+
       </view>
       <view class="column-center">
         <navigator url='/pages/account/favorMe' hover-class="none">
@@ -45,7 +47,9 @@
           </view>
         </navigator>
         <!-- <view  style='width:169rpx;height:90rpx' class="button-item" bindtap='cardCode'>名片码</view> -->
-        <navigator url='/pages/account/cardCode' style='width:169rpx;height:90rpx' class="button-item" hover-class="none">名片码</navigator>
+     
+        <button style='width:230rpx;height:90rpx' class="button-item button-1" open-type='share'>分享名片</button>
+
       </view>
     </view>
 
@@ -90,12 +94,15 @@
     <!-- </view> -->
     <empty wx:if="{{cards.length==0}}"></empty>
   </view>
-  <!-- <view class="modal-box column-center" wx:if="{{!isLogin}}">
+
+  <view class="modal-box column-center" wx:if="{{!isLogin&&handleError}}">
   <authorizePhone bind:getPhoneInfo='getPhoneInfo'></authorizePhone>
-</view> -->
+</view>
+
   <view class="modal-box column-center" wx:if="{{!userInfo}}">
   <authorize bind:getInfo='getInfo'></authorize>
 </view>
-<view class="mask" wx:if="{{!userInfo}}"></view>
+
+<view class="mask" wx:if="{{!userInfo||(!isLogin&&handleError)}}"></view>
   <!-- </view> -->
 </view>
