--- a/component/qListDetail/qListDetail.wxml
+++ b/component/qListDetail/qListDetail.wxml
@@ -63,7 +63,7 @@
       <view class='else clearfix' style='display:flex;justify-content:flex-start;align-items:center;width:100%;text-align:left'>
           <text class='text_time'>{{item.pay_count}}人已围观</text>
 
-            <view style='display:flex'>
+            <view style='display:flex;align-items:center'>
 
 
 
